upd slides - last version

--- a/slide/slide.qmd
+++ b/slide/slide.qmd
@@ -69,22 +69,30 @@ format:
 :::
 
 ::: {.incremental} 
-      - Visualiser et analyser les flux cyclistes.  
-      - Prévoir les mouvements de trafic avec une carte interactive.  
-      - Proposer des solutions pour optimiser les infrastructures urbaines.
+  - Visualiser et analyser les flux cyclistes.  
+  - Prévoir les mouvements de trafic avec une carte interactive.  
+  - Proposer des solutions pour optimiser les infrastructures urbaines.
 :::
 
 ::: fragment
 <div style="text-align: center;">
+<br>
 [**Schéma des résultats attendus :**]{.custom-subtitle3}
 ![](images/intro.svg){width=150%}
 </div>
 :::
+
+<div style="text-align: center;">
+<br>
+<br>
+</div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 ## Contribution de l'équipe
 <hr>
 <div style="text-align: center;">
+<br>
+
 <br>
 </div>
 ::: {.columns}
@@ -137,6 +145,17 @@ format:
 :::
 :::
 
+<div style="text-align: center;">
+<br>
+
+
+<br>
+<br>
+
+
+<br>
+</div>
+
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 # Résultats obtenus {.section-background}
@@ -147,12 +166,12 @@ format:
 
 ::: fragment
 <div style="text-align: center;">
-[**Nombre total de trajets des différentes années depuis 2020**]{.custom-subtitle3}
+[**Analyse des trajets en 2022**]{.custom-subtitle3}
 </div>
 ::: {.columns style="display: flex; justify-content: center;"}
 ::: {.column width="65%"}
 <div style="text-align: center;">
-<img src="images/analys_datasets/cell-2-output-2.png" width="60%" align="middle">
+<img src="images/analys_datasets/cell-2-output-2.png" width="63%" align="middle">
 </div>
 :::
 ::: {.column width="35%"}
@@ -168,14 +187,14 @@ format:
 [**Distance moyenne parcourue et stations les plus populaires**]{.custom-subtitle3}
 </div>
 ::: {.columns style="display: flex; justify-content: center;"}
-::: {.column width="55%"}
+::: {.column width="50%"}
 <div style="text-align: center;">
 <img src="images/analys_datasets/StationStat.png" width="60%" align="middle">
 </div>
 :::
-::: {.column width="45%"}
+::: {.column width="50%"}
 <div style="text-align: center;">
-<img src="images/analys_datasets/Distance_par_mois_2021_2024.png" width="100%" align="middle">
+<img src="images/analys_datasets/Distance_par_mois_2021_2024.png" width="85%" align="middle">
 </div>
 :::
 :::
@@ -183,7 +202,7 @@ format:
 
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
-## Creation maps interactives
+## Création des maps interactives
 <hr>
 <div style="text-align: center;">
 [**Stations de vélos à Montpellier**]{.custom-subtitle3}
@@ -254,7 +273,7 @@ display(IFrame("map.html", width="100%", height="450px"))
 <div class="message">
 <br>
 <br>
-Ci-dessous, vous trouverez une carte interactive présentant le *nombre de vélos en temps réel* disponibles dans les stations de la métropole de Montpellier. Cette carte offre une vue d’ensemble dynamique permettant de suivre l’état des stations en direct.
+Ci-dessus, une carte interactive présentant le *nombre de vélos en temps réel* disponibles dans les stations de la métropole de Montpellier. Cette carte offre une vue d’ensemble dynamique permettant de suivre l’état des stations en direct.
 </div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
@@ -267,85 +286,119 @@ Ci-dessous, vous trouverez une carte interactive présentant le *nombre de vélo
   </video>
 </div>
 
+<div style="text-align: center;">
+<br>
+
+
+
+<br>
+</div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 ## Simulations et prédictions
 <hr>
 
+<div style="text-align: center;">
+[**Carte des intensités moyennes**]{.custom-subtitle3}
+</div>
+
 ::: {.columns style="display: flex; justify-content: center;"}
 
-::: {.column width="50%"}
+::: {.column width="55%"}
 <div style="text-align: center;">
-[**Carte des intensités**]{.custom-subtitle3}
+[avec chaleur]{.custom-subtitle3}
+<br>
+
+<br>
 <img src="images/charl_1.png" width="100%" align="middle">
 </div>
 :::
 
-::: {.column width="50%"}
+::: {.column width="45%"}
+<div style="text-align: center;">
+[sans chaleur]{.custom-subtitle3}
+<img src="images/charl_11.png" width="83%" align="middle">
+</div>
+:::
+
+:::
+
+<div style="text-align: center;">
+<br>
+<br>
+</div>
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+## Simulations et prédictions
+<hr>
+
 <div style="text-align: center;">
 [**Carte des trajets**]{.custom-subtitle3}
-<img src="images/charl_2.png" width="100%" align="middle">
+</div>
+
+::: {.columns style="display: flex; justify-content: center;"}
+
+::: {.column width="50%"}
+<div style="text-align: center;">
+<img src="images/charl_1_2.png" width="73%" align="middle">
+</div>
+:::
+
+::: {.column width="50%"}
+<div style="text-align: center;">
+<img src="images/charl_1_3.png" width="73%" align="middle">
 </div>
 :::
 
 :::
 
-<!---------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------->
-## WEB integration
-<hr>
-
-VIDEO DE SITE
-
-<!---------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------->
-## Documentation des projet
-<hr>
-
-::: {.incremental} 
-1. **Documentation Technique**  
-   - Détails des fonctions clés : 
-        - cartes interactives (Folium)
-        - prédictions avec analyse de données 
-        - gestion et analyse vidéo.
-   - Documentation complète du class GestionnaireDonnees.  
-2. **Guide Utilisateur et ReadMe** : Création d’un guide utilisateur et d’un ReadMe clair facilitant l’installation et l’utilisation.
-3. **Workflow et Pipeline de Traitement des Données** : Documentation du Workflow du projet et du Pipeline de traitement avec explications pour chaque étape.
-4. **Tests et Performance Analysis** : Documentation des tests pour valider le projet et analyse des performances dans divers scénarios.
-5. **Tentative avec Sphinx pour la Documentation** : Mise en place initiale de la documentation avec Sphinx, même si elle n'a pas été finalisée.   
-:::
-
-<!---------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------->
-# Analysation de programm {.section-background}
-<!---------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------->
-## Tests
-<hr>
-
-::: {.incremental}  
-1. **Validation des dépendances**  : Test automatisé pour garantir l'installation correcte des bibliothèques listées dans `requirements.txt`.
-2. **Tests d’intégration des données**  
-   - Vérification de la connexion et du bon chargement des fichiers de données (CSV, JSON).
-   - Validation du format et de la qualité des données en entrée.
-3. **Affichage des cartes interactives** : Tests fonctionnels pour confirmer l’affichage et l’interactivité des cartes générées par Folium.
-4. **Automatisation avec GitHub Actions** : Configuration d’un pipeline CI/CD pour exécuter des tests basiques à chaque mise à jour du code.
-5. **Tests de connectivité** : Simulation d'accès utilisateur au site web pour vérifier la disponibilité et la navigation entre les sections.  
-:::
-<!---------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------->
-## Analyse des performances
-<hr>
-
-::: fragment
 <div style="text-align: center;">
 <br>
 <br>
+</div>
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+## Intégration WEB 
+<hr>
+
+<div style="text-align: center;">
+<img src="images/site_1.png" width="90%" align="middle">
+</div>
+
+<div style="text-align: center;">
+<br>
+<br>
+</div>
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+## Intégration WEB 
+<hr>
+
+<div style="text-align: center;">
+[**Carte interactive des trajets**]{.custom-subtitle3}
+</div>
+
+<div style="text-align: center;">
+<img src="images/shiny.png" width="60%" align="middle">
+</div>
+
+
+<div style="text-align: center;">
+<br>
+<br>
+</div>
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+# Analyse du script {.section-background}
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+## Analyse des performances et d'utilisation de la mémoire
+<hr>
+
+<div style="text-align: center;">
 [**Pour map_trajet_BD.py**]{.custom-subtitle3}
 </div>
-:::
 
-::: fragment
 ::: {.columns style="display: flex; justify-content: center;"}
 ::: {.column width="50%"}
 <div style="text-align: center;">
@@ -358,80 +411,60 @@ VIDEO DE SITE
 </div>
 :::
 :::
-:::
 
+<div style="text-align: center;">
+<br>
+</div>
 ::: fragment
 Les graphiques montrent les performances pour différentes quantités de trajets.
 :::
+
+<div style="text-align: center;">
+<br>
+
+
+
+<br>
+</div>
 <!---------------------------------------------------------------------------->
-
-
-
 <!---------------------------------------------------------------------------->
 ## Analyse des performances et d'utilisation de la mémoire
 <hr>
 
-::: fragment
-<div style="text-align: center;">
-[**Pour map_trajet_BD.py**]{.custom-subtitle3}
-</div>
-::: {.columns style="display: flex; justify-content: center;"}
-::: {.column width="30%"}
-<div style="text-align: center;">
-<img src="images/perf_analys/1.png" width="50%" align="middle">
-</div>
-:::
-::: {.column width="30%"}
-<div style="text-align: center;">
-<img src="images/perf_analys/2.png" width="50%" align="middle">
-</div>
-:::
-:::
-:::
-
-::: fragment
 <div style="text-align: center;">
 [**Pour vidéo.py**]{.custom-subtitle3}
 </div>
+
 ::: {.columns style="display: flex; justify-content: center;"}
-::: {.column width="30%"}
+::: {.column width="50%"}
 <div style="text-align: center;">
-<img src="images/perf_analys/3.png" width="50%" align="middle">
+<img src="images/perf_analys/3.png" width="100%" align="middle">
 </div>
 :::
-::: {.column width="30%"}
+::: {.column width="50%"}
 <div style="text-align: center;">
-<img src="images/perf_analys/4.png" width="50%" align="middle">
+<img src="images/perf_analys/4.png" width="100%" align="middle">
 </div>
-:::
 :::
 :::
 
+<div style="text-align: center;">
+<br>
+</div>
 ::: fragment
-::: {.columns style="display: flex; justify-content: center;"}
-::: {.column width="30%"}
-<div style="text-align: center;">
-<img src="images/perf_analys/5.png" width="50%" align="middle">
-</div>
-:::
-::: {.column width="30%"}
-<div style="text-align: center;">
-<img src="images/perf_analys/6.png" width="50%" align="middle">
-</div>
-:::
-:::
+Pour améliorer l'efficacité temporelle, des outils comme **ThreadPoolExecutor** et le **cache** ont été utilisés. L'importation directe des bases de données a également été privilégiée aux requêtes HTTP avec `requests` pour accélérer l'exécution.
 :::
 
-::: fragment
-<div class="message">
+<div style="text-align: center;">
 <br>
+
+
+
 <br>
-*Concernant l'efficacité temporelle, plusieurs problèmes ont été rencontrés lors des premiers essais. Pour y remédier, des outils tels que **ThreadPoolExecutor** et l'utilisation de **cache** ont été mis en place. De plus, un choix stratégique a été fait en privilégiant l'importation directe des bases de données, plutôt que de les appeler via des requêtes HTTP avec `requests`, afin d'améliorer la vitesse d'exécution.*
 </div>
-:::
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
-# Conclusion {.section-background}
+# Synthèse {.section-background}
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 ## Comparaison des diagrammes de Gantt 
@@ -507,29 +540,38 @@ Les graphiques montrent les performances pour différentes quantités de trajets
 </div>
 :::
 ::::
-::: fragment
-<div class="message">
-*Les blocs bleus dans les deux diagrammes représentent les tâches qui ont subi des changements, ajustements ou délais supplémentaires pendant la réalisation du projet.*
+
+<div style="text-align: center;">
+<br>
+<br>
 </div>
-:::
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 ## Problèmes rencontrés
 <hr>
 
 ::: {.incremental}  
-1. **Gestion des données :** Problèmes avec les formats des données (json non formatés, csv ou dataframe) et les données manquantes.  
-2. **Création de cartes interactives et prévisions de trafic :** Longueur en temps des créations de cartes.  
+1. **Gestion des données :**  
+   - Problèmes avec les formats des données (JSON non formatés, CSV ou DataFrame).  
+   - Importation et lecture des fichiers CSV, particulièrement complexes au début.  
+   - Données manquantes nécessitant un traitement supplémentaire.  
+2. **Création de cartes interactives et prévisions de trafic :**  
+   - Temps de création élevé pour développer des cartes interactives.  
 3. **Déploiement du site web :**  
-    - Déploiement du site au tout début (GitHub Pages).  
-    - Intégration des cartes, surtout celle avec l'application Shiny.
+   - Difficultés initiales lors du déploiement (GitHub Pages).  
+   - Intégration des cartes interactives, notamment celles utilisant **Shiny**.  
+   - Configuration des fonctionnalités interactives liées aux vidéos.  
 4. **Documentation du projet :**  
-    - Le grand nombre de fonctions a rendu leur formatage clair et lisible complexe.  
-    - La configuration et la personnalisation des fichiers pour garantir un rendu cohérent (pour le **Sphinx**).
-5. ** :**  
-     - [Ajouter les difficultés rencontrées par les membres de l'équipe ici]  
-
+   - Complexité liée au formatage clair et lisible d'un grand nombre de fonctions.  
+   - Configuration documentation avec **Sphinx**.  
 :::
+
+<div style="text-align: center;">
+<br>
+
+
+<br>
+</div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 ## Améliorations futures
@@ -537,47 +579,58 @@ Les graphiques montrent les performances pour différentes quantités de trajets
 
 ::: {.incremental}
 
-- **Renforcement des modèles de prédiction** : Une amélioration des modèles actuels pourrait être réalisée en intégrant des données supplémentaires, comme les conditions météorologiques ou les événements locaux, afin d'obtenir des prévisions plus précises.
-- **Ajout de données en temps réel** : L'intégration de données en temps réel, telles que les flux de trafic ou les perturbations temporaires, pourrait rendre les analyses plus dynamiques et adaptées à l'évolution des conditions.
-- **Application à d'autres contextes urbains** : Étendre cette méthodologie à d'autres villes permettrait de comparer les tendances cyclistes et d'identifier des spécificités locales ou des modèles universels.
-- **Amélioration de l'expérience utilisateur** : Le site Web pourrait être enrichi de fonctionnalités interactives supplémentaires, telles que la visualisation des prévisions de trafic ou des recommandations d'itinéraires alternatifs.
-
+- **Renforcement des modèles de prédiction :** Intégration de données supplémentaires (météo, événements) pour des prévisions plus précises.
+- **Ajout de données en temps réel :** Utilisation de données en temps réel (trafic, perturbations) pour des analyses plus dynamiques.
+- **Application à d'autres contextes urbains :** Extension de la méthodologie à d'autres villes pour comparer les tendances cyclistes.
+- **Amélioration de l'expérience utilisateur :** Ajout de fonctionnalités interactives, comme la visualisation des prévisions de trafic et des recommandations d'itinéraires.
 :::
+
+<div style="text-align: center;">
+<br>
+
+<br>
+<br>
+<br>
+</div>
+<div style="text-align: center;">
+<br>
+
+<br>
+<br>
+<br>
+</div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 ## Conclusion 
 <hr>
-<div style="text-align: left;">
-*Ce projet collectif nous a permis d'atteindre plusieurs objectifs clés tout en renforçant la collaboration au sein de l'équipe.*
+
+1. **Résultats obtenus :**  
+   - Analyse approfondie des flux cyclistes.  
+   - Identification de solutions pour optimiser les infrastructures urbaines.  
+
+2. **Documentation complète du projet.** 
+
+3. **Expérience en travail d'équipe.** 
+
+4. **Compétences développées :**  
+   - Analyse des données avec Python.  
+   - Visualisation des données avec **Folium**. 
+   - Configuration et automatisation CI/CD avec **GitHub Actions**.  
+
+5. **Validation et tests.**   
+
+<div style="text-align: center;">
+<br>
+
+
+<br>
 </div>
+<div style="text-align: center;">
+<br>
 
-::: {.incremental}
-- **Résultats obtenus :** Analyse des données sur le trafic cycliste avec des visualisations interactives et cartes prédictives.  
-- **Expérience en travail d'équipe :** Renforcement des compétences en communication, répartition des tâches et collaboration.  
-- **Compétences développées :** Analyse avec Python, visualisation avec Folium et [Sphinx], et [configuration CI/CD avec GitHub Actions].  
-:::
 
-::: fragment
-<div style="text-align: left;">
-En somme, ce projet n'a pas seulement été une occasion d'appliquer des connaissances techniques, mais également une expérience enrichissante sur le plan personnel et collectif. Nous avons appris que la réussite d'un tel projet repose sur l'écoute, l'initiative, et la coopération.  
+<br>
 </div>
-:::
-<!---------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------->
-## Crédits
-<hr>
-
-::: {.incremental}
-- *Dépôt GitHub du projet* :  [https://github.com/mscaia/PROJ_HAX712X](https://github.com/mscaia/PROJ_HAX712X)  
-- *Programme du cours* : [https://josephsalmon.github.io/HAX712X/](https://josephsalmon.github.io/HAX712X/)  
-- *Plateforme YouTube* : Des vidéos et tutoriels sur YouTube ont été consultés afin de renforcer la compréhension de certaines étapes du projet.  
-- *Utilisation de ChatGPT* : ChatGPT a été utilisé comme ressource pour explorer des concepts techniques, résoudre des défis méthodologiques et optimiser certaines parties du code, ainsi que pour faciliter la recherche et la rédaction de la documentation.  
-- [Ajouter ici d'autres crédits si nécessaire.]  
-- Photo utilisée avec l'aimable autorisation de [Pixabay](https://pixabay.com/fr/photos/motards-cycliste-cyclisme-activit%C3%A9-446362/)
-- GIF: [sl.bing.net](https://sl.bing.net/eA2waB7nBJY)
-- Des petites icônes et logos ont été recherchés sur Internet pour représenter certaines fonctionnalités.
-:::
-
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 # Merci pour votre attention ! {.section-background1}
@@ -588,4 +641,29 @@ En somme, ce projet n'a pas seulement été une occasion d'appliquer des connais
 ![](images/6451064.gif){width=21%}
 <br>
 [Nous espérons que vos prochaines aventures cyclistes seront plus fluides que nos premières analyses !]{.custom-subtitle4}
+</div>
+
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+## Crédits
+<hr>
+
+
+- *Dépôt GitHub du projet* :  [https://github.com/mscaia/PROJ_HAX712X](https://github.com/mscaia/PROJ_HAX712X)  
+- *Programme du cours* : [https://josephsalmon.github.io/HAX712X/](https://josephsalmon.github.io/HAX712X/)  
+- *Plateforme YouTube* : Des vidéos et tutoriels sur YouTube ont été consultés afin de renforcer la compréhension de certaines étapes du projet.  
+- *ChatGPT* : ChatGPT a été utilisé comme ressource pour explorer des concepts techniques, résoudre des défis méthodologiques et optimiser certaines parties du code, ainsi que pour faciliter la recherche et la rédaction de la documentation.  
+- *Photo* utilisée avec l'aimable autorisation de [Pixabay](https://pixabay.com/fr/photos/motards-cycliste-cyclisme-activit%C3%A9-446362/)
+- *GIF*: [sl.bing.net](https://sl.bing.net/eA2waB7nBJY)
+- Des *petites icônes et logos* ont été recherchés sur Internet pour représenter certaines fonctionnalités.
+
+<div style="text-align: center;">
+<br>
+
+
+<br>
+<br>
+
+
+<br>
 </div>
