--- a/docs/docu.qmd
+++ b/docs/docu.qmd
@@ -586,32 +586,91 @@ def gen_carte_trajet(ligne, G, m, index_colonne_départ, index_colonne_arrive,co
 [PUT ILLUSTRATION OF TRAJECTORY MAP HERE]
 </details>
 
+<details> 
+  <summary>`intensity_to_color(intens, min_in, max_in)`</summary>
+**Description**:  
+ La fonction renvoie un code couleur pour une intensité donnée. 
 
+**Paramètres**:  
+- `intens` (int): L'intensité qu'on cherche à représenter. 
+- `min_in` (int): L'intensité minimale à représenter. Elle correspond au minimum de l'échelle de couleur.
+- `max_in` (int): L'intensité maximale à représenter. Elle correspond au maximum de l'échelle de couleur. 
+
+
+**Retourne**:  
+- `rgba({}, {}, {}, {})` (arg): Le code couleur RGB associé à l'intensité à représenter.  
+
+**Code de la fonction**:  
+```python
+def intensity_to_color(intens, min_in, max_in): 
+    """
+    Description: 
+    La fonction 'intensity_to_color' renvoie un code couleur pour une intensité donnée.  
+    
+    Args: 
+    intens : int 
+	L'intensité qu'on cherche à représenter. 
+    min_in : int 
+	L'intensité minimale à représenter. Elle correspond au minimum de l'échelle de couleur. 
+    max_in : int 
+	L'intensité maximale à représenter. Elle correspond au maximum de l'échelle de couleur. 
+        
+    Returns: 
+    'rgba({}, {}, {}, {})'  : str 
+	Le code couleur RGB associé à l'intensité à représenter. 
+    """
+    norm_in = (intens - min_in) / (max_in - min_in)
+    color = plt.cm.RdYlGn_r(norm_in)  # Colormap GnYlRd(vert à rouge)
+    return 'rgba({}, {}, {}, {})'.format(int(color[0] * 255), int(color[1] * 255), int(color[2] * 255), 1)
+
+```
+
+**Exemple d'utilisation**:
+Suppososns qu'on veuille représenter la valeur 12 sur une échelle allant de 6 à 18
+
+Appeler `intensity_to_color(12, 6, 18)` retourne `rgba(254, 254, 189, 1)`
+</details>
 
 <details> 
-  <summary>`map_jour(j, style)`</summary>
+  <summary>`map_jour(j, style, jour)`</summary>
+**Description**:  
+ La fonction génère une carte des intensités moyennes observées un jour de la semaine `j`. 
 
-**Description**: 
- Génère une carte interactive pour visualiser l'intensité mesurée à chaque coordonnée sur un jour 'j'
+**Paramètres**:  
+- `j` (int): Le numéro du jour de la semaine (entre 0 et 6) voulu.  
+- `style` (int): Le numéro (0 ou 1) correspondant au style voulu. 0 donnera une carte avec uniquement des points de différentes couleur et 1 donnera une carte avec ces points mais également la carte de chaleur (Heatmap) associée.
+- `jour` (str): Le jour de la semaine voulu (format Jour). 
 
-**Paramètres**:
-  <ul>
-    <li>`j` (int) : Le numéro du jour de la semaine voulu (0 pour lundi, ..., 6 pour dimanche)
-    <li>`style` (int): lestyle d'affichage voulu: 0 si on veut que les points des coordonnées, 1 si on veut aussi la 'chaleur'
-  <\ul>
 
-**Retourne**:
-- (str) un message avec le nom de la fonction créée
+**Retourne**:  
+- `La carte a été générée et sauvegardée sous le nom`, `nom` (str, str) : Un message de validation de création de la carte et le nom sous lequel elle a été enregistrée. 
 
-**Code de la fonction**: 
+
+**Code de la fonction**:  
 ```python
-def map_jour(j, style):#entrée 0-6 pour les jours de la semaine, 0-1 sans-avec chaleur
+def map_jour(j, style,jour):# entrée 0-6 pour les jours de la semaine, 0-1 sans-avec chaleur
+    """
+    Description: 
+    La fonction 'map_jour' génère une carte des intensités moyennes observées un jour de la semaine j. 
+    
+    Args: 
+    - j : int
+        Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+    - style : int
+        Le numéro (0 ou 1) correspondant au style voulu. 0 donnera une carte avec uniquement des points de différentes couleur et 1 donnera une carte avec ces points mais également la carte de chaleur (Heatmap) associée. 
+    - jour : str
+        Le nom du jour correspondant (par exemple, "Lundi", "Mardi", etc.), utilisé pour nommer les fichiers générés.
+        
+    Returns: 
+    - 'La carte a été générée et sauvegardée sous le nom', nom : str, str 
+        Un message de validation de création de la carte et le nom sous lequel elle a été enregistrée. 
+    """
     data = mean_intens(j)
     intensities = [d[0] for d in data]
     min_in = min(intensities)
     max_in = max(intensities)
 
-    # centrer 
+    # Centrer 
     ville = "Montpellier, France"
     location = ox.geocode(ville)
     m = folium.Map(location=location, zoom_start=12)
@@ -625,115 +684,269 @@ def map_jour(j, style):#entrée 0-6 pour les jours de la semaine, 0-1 sans-avec 
             folium.CircleMarker(
                 location=[lon, lat],
                 radius=8,
+                popup=f"{intensity}",
                 color=color,
                 fill=True,
                 fill_color=color,
                 fill_opacity=0.6
                 ).add_to(m)
-        
-    #choix de chaleur ou non
+            
+    legend_html ="""
+<div style="
+            position: fixed;
+            bottom: 50px;
+            left: 50px;
+            width: 220px;
+            height: 120px;
+            background-color: white;
+            border: 2px solid grey;
+            z-index: 9999;
+            font-size: 14px;
+            padding: 10px;
+            ">
+            <b>Nombre de passages:</b>
+            <div style="
+                height: 20px;
+                background: linear-gradient(to right, #008000, #f1fd4d, #f20000);
+                margin: 10px 0;
+                ">
+            </div>
+            <div style="display: flex; justify-content: space-between;">
+                <span>Faible</span>
+                <span>Élevé</span>
+            </div>
+        </div>
+    """
+
+    m.get_root().html.add_child(folium.Element(legend_html))
+    # Choix de chaleur ou non
     if style==0:
         nom=f'intensity_{j}.html'
-        m.save(nom)
+        m.save(f'./Cycle3/visualisation/{jour}/intensité/{nom}')
         return "La carte a été générée et sauvegardée sous le nom", nom
     
     else:
         heat_data = [[coord[1], coord[0], intensity] for intensity, coord in data]
         HeatMap(heat_data).add_to(m)
         nom=f'intensity_{j}_heat.html'
-        m.save(nom)
+        m.save(f'./Cycle3/visualisation/{jour}/intensité/{nom}')
         return"La carte a été générée et sauvegardée sous le nom", nom 
+
 ```
-[PUT ILLUSTRATION OF TRAJECTORY MAP HERE]
 </details>
 
+<details> 
+  <summary>`map_jour_h(j, h,style,jour)`</summary>
+**Description**:  
+La fonction génère une carte des intensités moyennes observées un jour de la semaine `j` à une heure `h`.
+  
+**Paramètres**:  
+- `j` (int): Le numéro du jour de la semaine (entre 0 et 6) voulu.
+- `h` (int): Le numéro de l'heure (entre 0 et 23) voulue. 
+- `style` (int): Le numéro (0 ou 1) correspondant au style voulu. 0 donnera une carte avec uniquement des points de différentes couleur et 1 donnera une carte avec ces points mais également la carte de chaleur (Heatmap) associée. 
+- `jour` (str): Le jour voulu (format Jour). 
+
+**Retourne**:  
+-  `'La carte a été générée et sauvegardée sous le nom' `,  `nom`  (str, str): Un message de validation de création de la carte et le nom sous lequel elle a été enregistrée. 
+
+
+**Code de la fonction**:  
+```python
+def map_jour_h(j, h,style,jour):# Entrée 0-6 pour les jours de la semaine, 0-1 sans-avec chaleur
+    """
+    Description: 
+    La fonction 'map_jour_h' génère une carte des intensités moyennes observées un jour de la semaine j à une heure h. 
+    
+    Args: 
+    - j : int
+        Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+    - h : int
+        Le numéro de l'heure voulue (entre 0 et 23, 0 étant la plage horraire 00h00- 00h59). 
+    - style : int
+        Le numéro (0 ou 1) correspondant au style voulu. 0 donnera une carte avec uniquement des points de différentes couleur et 1 donnera une carte avec ces points mais également la carte de chaleur (Heatmap) associée. 
+    - jour : str
+        Le nom du jour correspondant (par exemple, "Lundi", "Mardi", etc.), utilisé pour nommer les fichiers générés.
+        
+    Returns: 
+    - 'La carte a été générée et sauvegardée sous le nom', nom : str, str 
+        Un message de validation de création de la carte et le nom sous lequel elle a été enregistrée. 
+    """    
+    data = mean_intens(j)
+    p=poids_par_h(j)
+    intensities = [d[0]*p[h][1]/100 for d in data]
+    min_in = min(intensities)
+    max_in = max(intensities)
+
+    # Centrer 
+    ville = "Montpellier, France"
+    location = ox.geocode(ville)
+    m = folium.Map(location=location, zoom_start=12)
+
+
+    # Ajouter les points sur la carte
+    for intensity, coord in data:
+        newint=intensity*p[h][1]/100
+        lon, lat = coord[1], coord[0]# Inversion des valeurs
+        if abs(lon-location[0])<1 and abs(lat-location[1])<1:
+            color = intensity_to_color(newint, min_in, max_in)
+            folium.CircleMarker(
+                location=[lon, lat],
+                radius=8,
+                popup=f"{newint}",
+                color=color,
+                fill=True,
+                fill_color=color,
+                fill_opacity=0.6
+                ).add_to(m)
+            
+    # Générer la légende avec les couleurs correspondant aux min et max
+    min_color = intensity_to_color(min_in, min_in, max_in)  # Couleur pour la valeur minimale
+    max_color = intensity_to_color(max_in, min_in, max_in)  # Couleur pour la valeur maximale
+
+    legend_html = f"""
+    <div style="
+        position: fixed;
+        bottom: 50px;
+        left: 50px;
+        width: 200px;
+        height: 100px;
+        background-color: white;
+        border:2px solid grey;
+        z-index:9999;
+        font-size:14px;
+        padding: 10px;
+    ">
+        <b>Nombre de passages:</b><br>
+        <i style="background: {min_color}; width: 20px; height: 10px; display: inline-block;"></i> {round(min_in, 2)}<br>
+        <i style="background: {max_color}; width: 20px; height: 10px; display: inline-block;"></i> {round(max_in, 2)}<br>
+    </div>
+    """
+
+    m.get_root().html.add_child(folium.Element(legend_html))
+    # Choix de chaleur ou non
+    if style==0:
+        nom=f'intensity_{j}_{h}.html'
+        m.save(f'./Cycle3/visualisation/{jour}/intensité/{nom}')
+        return "La carte a été générée et sauvegardée sous le nom", nom
+    
+    else:
+        heat_data = [[coord[1], coord[0], intensity] for intensity, coord in data]
+        HeatMap(heat_data).add_to(m)
+        nom=f'intensity_{j}_{h}_heat.html'
+        m.save(f'./Cycle3/visualisation/{jour}/intensité/{nom}')
+        return"La carte a été générée et sauvegardée sous le nom", nom
+```
+</details>
 
 <details> 
-  <summary>`map_trajets(j, h)`</summary>
+  <summary>`map_trajets(j, h,jour)`</summary>
+**Description**:  
+La fonction génère une carte des trajets parcourus un jour de la semaine j et à une heure h, ainsi que la probabilité qu'il soit de nouveau parcouru (en tenant compte des archives).        
 
-**Description**: 
-Génère une carte représentant tout les trajets moyens empruntés le jour `j` à l'heure `h` représentés par couleur en fonction de l'intensité. 
+**Paramètres**:  
+- `j` (int): Le numéro du jour de la semaine (entre 0 et 6) voulu.   
+- `h` (int): Le numéro de l'heure (entre 0 et 23) voulue.   
+- `jour` (str): Le jour voulu (format Jour).   
 
-**Paramètres**:
-  <ul>
-    <li>`j` (int) : Le numéro du jour de la semaine voulu (0 pour lundi, ..., 6 pour dimanche)
-    <li>`h` (int): Le numéro de l'heure dans la journée qu'on veut observer (de 0 à 23)
-  <\ul>
+**Retourne**:  
+- `'La carte a été générée et sauvegardée sous le nom'`, `nom ` (str, str): Un message de validation de création de la carte et le nom sous lequel elle a été enregistrée. 
 
-**Retourne**:
-- (list, str): une liste des stations de départ et d'arrivée de tous les trajets qui n'ont pas été tracés et un message avec le nom de la fonction créée
 
-**Code de la fonction**: 
+
+**Code de la fonction**:  
 ```python
-def map_trajets(j, h):
-    trajets=trajets_parcourus(j, h)
+def map_trajets(j, h,jour):
+    """
+    Description: 
+    La fonction 'map_trajets' génère une carte des trajets parcourus un jour de la semaine j et à une heure h, ainsi que la probabilité qu'il soit de nouveau parcouru (en tenant compte des archives). 
+    
+    Args: 
+    - j : int
+        Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+    - h : int
+        Le numéro de l'heure (entre 0 et 23) voulue. 
+    - jour : str
+        Le nom du jour correspondant (par exemple, "Lundi", "Mardi", etc.), utilisé pour nommer les fichiers générés.
+        
+    Returns: 
+    - 'La carte a été générée et sauvegardée sous le nom', nom : str, str 
+        Un message de validation de création de la carte et le nom sous lequel elle a été enregistrée. 
+    """
+    trajets=All_t[j][h]
     stations_dict = {station[0]: station[1] for station in stations}
-    N=nb_tot_jour(j)
+    if j==0:
+        N=Nl
+    elif j==1:
+        N=Nma
+    elif j==2: 
+        N=Nme
+    elif j==3:
+        N=Nj
+    elif j==4:
+        N=Nv
+    elif j==5: 
+        N=Ns
+    else: 
+        N=Nd
     
     
     ville = "Montpellier, France"
     location = ox.geocode(ville)
+    graphe = ox.graph_from_point(location, dist=10000, network_type="all", simplify=True)
+    carte = folium.Map(location=location, zoom_start=14)
 
-    # marge de distances supplémentaire
-    graphe = ox.graph_from_point(location, dist=10000, network_type="bike", simplify=True)
-
-    # Initialisation
-    carte = folium.Map(location=location, zoom_start=13)
-
-    #nb passages 
+    # nb passages 
     edges_passages = defaultdict(int)
 
     for trajet in trajets:
-        try:
-            start, end = trajet[0]
-            intensity = trajet[1]/N
-            if start in stations_dict and end in stations_dict:
+        start, end = trajet[0]
+        intensity = min(trajet[1]/N, 1)
+        if start in stations_dict and end in stations_dict:
+            if start!=end:
                 lon_start, lat_start = stations_dict[start]
                 lon_end, lat_end = stations_dict[end]
 
                 # Trouver les nœuds les plus proches dans le graphe
-                try:
-                    start_node = ox.distance.nearest_nodes(graphe, lon_start, lat_start)
-                    end_node = ox.distance.nearest_nodes(graphe, lon_end, lat_end)
+                start_node = ox.distance.nearest_nodes(graphe, lon_start, lat_start)
+                end_node = ox.distance.nearest_nodes(graphe, lon_end, lat_end)
+                # Calculer le chemin entre les deux nœuds
+                path = nx.shortest_path(graphe, start_node, end_node, weight="length")
 
-                    # Calculer le chemin entre les deux nœuds
-                    path = nx.shortest_path(graphe, start_node, end_node, weight="length")
+            # Ajouter chaque segment du chemin au compteur de passages
+            for u, v in zip(path[:-1], path[1:]):
+                edges_passages[(u, v)] += intensity
+                edges_passages[(v, u)] += intensity  # Compte les passages dans les deux sens 
 
-                    # Ajouter chaque segment du chemin au compteur de passages
-                    for u, v in zip(path[:-1], path[1:]):
-                        edges_passages[(u, v)] += intensity
-                        edges_passages[(v, u)] += intensity  #on compte les passages dans les deux sens 
-                except nx.NetworkXNoPath:
-                    print(f"Aucun chemin entre {start} et {end}")
-        except Exception as e:
-            print(f"Erreur lors du traitement du trajet {trajet}: {e}")
-
-    #couleurs en fonction du nb de passages
+    # Couleurs en fonction du nb de passages
     for (u, v), passage_count in edges_passages.items():
-        # récup coordonnées des segments
+        # Récup coordonnées des segments
         coords = [
             (graphe.nodes[u]['y'], graphe.nodes[u]['x']),
             (graphe.nodes[v]['y'], graphe.nodes[v]['x'])
         ]
 
         # Calcul de la couleur
-        if passage_count < 0.5:
-           color= "#0000ff" 
-        else:     
-            max_intensity = 4  # Ajuster selon les données
-            passage_clamped = max(0, min(passage_count, max_intensity))  # Limiter à une plage raisonnable
-            red = int(255 * (passage_clamped / max_intensity))
-            green = int(255 * (1 - passage_clamped / max_intensity))
-            color = f"#{red:02x}{green:02x}00"
+        if passage_count < 0.05:
+           color= "#0000ff" # bleu si faible
+        elif passage_count < 0.15:
+            color= "#008000" # vert 
+        elif passage_count < 0.25:
+            color="#ffff00" # jaune
+        elif passage_count < 0.35: 
+            color="#ff80000" # orange 
+        elif passage_count < 1: 
+            color="#ff0000" # rouge si fort 
+        else:
+            passage_count=1
+            color="#000000"
 
-
-        # Ajouter chaque segment
+        # Ajouter le segment
         folium.PolyLine(
             locations=coords,
             color=color,
-            weight=4,  # Épaisseur fixe
+            weight=4,
             opacity=0.8,
-            tooltip=f"Passages: {passage_count}"
+            tooltip=f"Pourcentage: {passage_count*100}"
         ).add_to(carte)
 
     # Ajout des stations comme marqueurs
@@ -758,29 +971,31 @@ def map_trajets(j, h):
         bottom: 50px;
         left: 50px;
         width: 200px;
-        height: 140px;
+        height: 200px;
         background-color: white;
         border:2px solid grey;
         z-index:9999;
         font-size:14px;
         padding: 10px;
         ">
-        <b>Nombre de passages:</b><br>
-        <i style="background: #0000ff; width: 20px; height: 10px; display: inline-block;"></i> Très faible (&lt;1)<br>
-        <i style="background: #00ff00; width: 20px; height: 10px; display: inline-block;"></i> Faible (1-2)<br>
-        <i style="background: #80ff00; width: 20px; height: 10px; display: inline-block;"></i> Modérée (3-5)<br>
-        <i style="background: #ff0000; width: 20px; height: 10px; display: inline-block;"></i> Forte (&gt;5)<br>
+        <b>Pourcentage de chance que le trajet soit parcouru:</b><br>
+        <i style="background: #0000ff; width: 20px; height: 10px; display: inline-block;"></i> Très faible (&lt;5%)<br>
+        <i style="background: #008000; width: 20px; height: 10px; display: inline-block;"></i> Faible (5%-14%)<br>
+        <i style="background: #ffff00; width: 20px; height: 10px; display: inline-block;"></i> Modéré (15%-24%)<br>
+        <i style="background: #ff8000; width: 20px; height: 10px; display: inline-block;"></i> Fort (25%-34%)<br>
+        <i style="background: #ff0000; width: 20px; height: 10px; display: inline-block;"></i> Très fort (&gt; 34%)<br>
+        <i style="background: #000000; width: 20px; height: 10px; display: inline-block;"></i> Sûr (1)<br>
     </div>
     """
     carte.get_root().html.add_child(folium.Element(legend_html))
 
-    # Save la carte
+    # Sauvergarder la carte
     nom = f"trajets_couleurs_cumulées_j{j}_h{h}.html"
-    carte.save(nom)
+    carte.save(f'./Cycle3/visualisation/{jour}/Trajetscouleurs/{nom}')
     return f"Carte enregistrée sous '{nom}'."
 ```
-[PUT ILLUSTRATION OF TRAJECTORY MAP HERE]
 </details>
+
 
 
 #### Fonctions utilitaires
@@ -813,21 +1028,32 @@ Convertit une colonne d'un DataFrame Pandas en type datetime. Supprime les valeu
 
 <details> 
   <summary>`jour_semaine(j)`</summary>
+**Description**:  
+La fonction renvoie une liste des intensités et leurs coordonnées qui ont été mesurées à une date correspondant au jour de la semaine `j`. 
 
-**Description**: 
-Crée une liste des données uniquement pour les jours correspondant au jour `j`
+**Paramètre**:  
+- `j` (int) : Le numéro du jour de la semaine (entre 0 et 6) voulu.   
 
-**Paramètres**:
-  <ul>
-    <li>`j` (int) : Le numéro du jour de la semaine voulu (0 pour lundi, ..., 6 pour dimanche)
-  <\ul>
+**Retourne**:  
+- `L` (list) :Une liste contenant toutes les données étant rattachées à une date correspondant au jour de la semaine voulu. Les données sont l'intensité et les coordonnées auxquelles elle est liée. 
+ 
 
-**Retourne**:
-- (list): une liste des données prises un jour `j`
-
-**Code de la fonction**: 
+**Code de la fonction**:  
 ```python
 def jour_semaine(j):
+    """
+    Description: 
+    La fonction 'jour_semaine' renvoie une liste des intensités et leurs coordonnées qui ont été mesurées à une date correspondant au jour de la semaine j. 
+    
+    Args: 
+    - j : int
+        Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+        
+    Returns:
+    - list 
+        Une liste contenant toutes les données étant rattachées à une date correspondant au jour de la semaine voulu. Les données sont l'intensité et les coordonnées auxquelles elle est liée. 
+    """
+    
     Lundi=[]
     Mardi=[]
     Mercredi=[]
@@ -866,27 +1092,37 @@ def jour_semaine(j):
         return Samedi 
     else:
         return Dimanche 
+
 ```
 </details>
  
 
 <details> 
   <summary>`coor_unique(j)`</summary>
+**Description**:  
+La fonction extrait toutes les coordonnées prises sur un jour `j` de façon unique. 
+    
+**Paramètre**:  
+- `j` (int) : Le numéro du jour de la semaine (entre 0 et 6) voulu.   
 
-**Description**: 
-Crée une liste des coordonnées de façon unique pour les jours correspondant au jour `j`
+**Retourne**:  
+- `L` (list) : Une liste contenant toutes les coordonnées apparaissant dans les données prises un jour de la semaine j de façon unique. 
 
-**Paramètres**:
-  <ul>
-    <li>`j` (int) : Le numéro du jour de la semaine voulu (0 pour lundi, ..., 6 pour dimanche)
-  <\ul>
-
-**Retourne**:
-- (list): une liste des coordonnées actives sur un jour `j`
-
-**Code de la fonction**: 
+**Code de la fonction**:  
 ```python
 def coor_unique(j):
+    """
+    Description: 
+    	La fonction 'coor_unique' extrait toutes les coordonnées prises sur un jour j de façon unique. 
+    
+    Paramètre: 
+	j : int 
+		Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+
+    Retourne: 
+    	list  
+		Une liste contenant toutes les coordonnées apparaissant dans les données prises un jour de la semaine j de façon unique. 
+    """
     L=jour_semaine(j)
     co=[]
     for i in L:
@@ -896,36 +1132,46 @@ def coor_unique(j):
 ```
 </details>
 
-
 <details> 
   <summary>`nb_tot_jour(j)`</summary>
+**Description**:  
+La fonction renvoie le nombre de dates comptées dans les donnnées correspondants au jour de la semaine `j`. 
+    
+**Paramètre**:  
+- `j` (int): Le numéro du jour de la semaine (entre 0 et 6) voulu.   
 
-**Description**: 
-Compte le nombre de jours correspondant au jour `j`
+**Retourne**:  
+- `len(D)` (int): Le nombre de jour `j` comptés dans les données.
 
-**Paramètres**:
-  <ul>
-    <li>`j` (int) : Le numéro du jour de la semaine voulu (0 pour lundi, ..., 6 pour dimanche)
-  <\ul>
 
-**Retourne**:
--len(D) (int): le nombre de jours étant un jour `j` dans les données
-
-**Code de la fonction**: 
+**Code de la fonction**:  
 ```python
 def nb_tot_jour(j):
+    """
+    Description: 
+    La fonction 'nb_tot_jour' renvoie le nombre de dates comptées dans les donnnées correspondants au jour de la semaine j. 
+    
+    Args: 
+    - j : int
+        Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+        
+    Returns: 
+    - int 
+        Le nombre de jour j comptés dans les données.
+    """
+    
     D=[]
     for file in files:
         with open(file, 'r', encoding='utf-8') as f:
-            lecteur = csv.reader(f, delimiter=';')  # Séparateur ';' dans les 'files'
-            next(lecteur) #ignorer l'entête 
+            lecteur = csv.reader(f, delimiter=',')  # Définir le séparateur si nécessaire
+            next(lecteur) # Ignorer l'entête 
             for ligne in lecteur: 
                 dat, heur = ligne[0].split(' ')
                 date=datetime.strptime(dat, '%Y-%m-%d')
                 jour=date.weekday()
                 if jour==j:
-                    dep=ligne[2].split(' ')[0]
-                    arr=ligne[3].split(' ')[0]
+                    dep=ligne[1].split(' ')[0]
+                    arr=ligne[2].split(' ')[0]
                     if dep!='' and arr!='':
                         if dep in Sta and arr in Sta:
                             if dat not in D:
@@ -937,22 +1183,32 @@ def nb_tot_jour(j):
 
 ### 6.2.2 Prédiction 
 
-<details>
+<details> 
   <summary>`mean_intens(j)`</summary>
-**Description**:
-Cette fonction donne l'intensité moyenne par coordonnée mesurée sur un jour `j`. 
+**Description**:  
+La fonction renvoie une liste des moyennes des intensités par coordonnées mesurées à une date correspondant au jour de la semaine j. 
+    
+**Paramètres**:  
+- `j` (int) : Le numéro du jour de la semaine (entre 0 et 6) voulu.   
 
-**Paramètre**:
-  <ul>
-    <li>`j` (int): Le numéro du jour de la semaine (0 pour lundi, ..., 6 pour dimanche)
-  </ul>
+**Retourne**:  
+- `L` (list) :  Une liste contenant toutes les moyennes d'intensité et les coordonnées auxquelles elle sont liées. 
 
-**Retourne**:
-- `M` (matrix): Une matrice contenant les valeurs des intensités pour chaque coordonnée sur le jour `j` en moyenne. 
-
-**Code de la fonction**:
+**Code de la fonction**:  
 ```python
 def mean_intens(j):
+    """
+    Description: 
+    La fonction 'mean_intens' renvoie une liste des moyennes des intensités par coordonnées mesurées à une date correspondant au jour de la semaine j. 
+    
+    Args: 
+    j : int 
+	Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+        
+    Returns: 
+    list 
+	Une liste contenant toutes les moyennes d'intensité et les coordonnées auxquelles elle sont liées. 
+    """
     N=0 
     L=jour_semaine(j)
     M=[]
@@ -974,6 +1230,7 @@ def mean_intens(j):
             i[0]=sum/N
             M.append(i)
     return M 
+
 ```
 
 **Exemple d'utilisation**:
@@ -989,67 +1246,47 @@ Appeler `mean_intens(5)` retourne `[[[3.48, 43.8], 20.5], [[3.47, 43.7], 32]]`
 
 </details>
 
-<details>
-  <summary>`intensity_to_color(intens, min_in, max_in):`</summary>
-**Description**:
-Cette fonction associe une couleur à une intensité en fonction de sa "position" par rapport aux intensités maximales et minimales 
+<details> 
+  <summary>`poids_par_h(j)`</summary>
+**Description**:  
+La fonction compte la participation de chaque heure dans la journée. Elle donne la proportion de l'activité journalière calculée par heure pour le jour de la semaine `j`.   
+  
+**Paramètre**:  
+- `j` (int): Le numéro du jour de la semaine (entre 0 et 6) voulu.   
+
+**Retourne**:  
+- `` (matrix): Une matrice avec pour colonne les heures et le pourcentage de l'activité journalière associée à chacune de ces heures.
 
 
-**Paramètre**:
-  <ul>
-    <li>`intens` (int): Valeur de l'intensité qu'on cherche à associer à une couleur
-    <li>`min_int` (int): Valeur de l'intensité minimale
-    <li>`max_int` (int): Valeur de l'intensité maximale 
-  </ul>
-
-**Retourne**:
-- `rgba(x, y, z, 1) ` (list): Une liste contenant le code couleur associé à l'intensité représentée 
-
-
-**Code de la fonction**:
-```python
-def intensity_to_color(intens, min_in, max_in):  
-    norm_in = (intens - min_in) / (max_in - min_in)
-    color = plt.cm.RdYlGn_r(norm_in)  # Colormap GnYlRd(vert à rouge)
-    return 'rgba({}, {}, {}, {})'.format(int(color[0] * 255), int(color[1] * 255), int(color[2] * 255), 1)
-
-```
-
-**Exemple d'utilisation**:
-Suppososns qu'on veuille représenter la valeur 12 sur une échelle allant de 6 à 18
-
-Appeler `intensity_to_color(12, 6, 18)` retourne `rgba(254, 254, 189, 1)`
-
-</details>
-
-
-<details>
-  <summary>`poids_par_heure(j):`</summary>
-**Description**:
-Cette fonction classe les trajets d'un jour `j` par heure 
-
-**Paramètre**:
-- `j` (int): Numéro du jour de la semaine (0 pour lundi, ..., 6 pour dimanche)
-
-**Retourne**:
--`pourcentage de trajets par heure M` avec M (matrix): [[station départ, station arrivée], nombre de trajets *100/nombre total de trajets sur `j`]
-
-**Code de la fonction**:
+**Code de la fonction**:  
 ```python
 def poids_par_h(j):
+    """
+    Description: 
+    La fonction 'poids_par_h' compte la participation de chaque heure dans la journée. Elle donne la proportion de l'activité journalière calculée par heure pour le jour de la semaine j. 
+    
+    Args: 
+    - j : int
+        Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+        
+    Returns: 
+    - matrix 
+        Une matrice avec pour colonne les heures et le pourcentage de l'activité journalière associée à chacune de ces heures. 
+    """
     heures = {heure: 0 for heure in range(24)}
     D=[]
     for file in files:
         with open(file, 'r', encoding='utf-8') as f:
-            lecteur = csv.reader(f, delimiter=';')  
+            lecteur = csv.reader(f, delimiter=',')  
             next(lecteur) #ignorer l'entête 
             for ligne in lecteur: 
-                dat, heur = ligne[0].split(' ')
+                dat = ligne[0].split(' ')[0]
+                heur =ligne[0].split(' ')[1]
                 date=datetime.strptime(dat, '%Y-%m-%d')
                 jour=date.weekday()
                 if jour==j:
-                    dep=ligne[2].split(' ')[0]
-                    arr=ligne[3].split(' ')[0]
+                    dep=ligne[1].split(' ')[0]
+                    arr=ligne[2].split(' ')[0]
                     if dep!='' and arr!='':
                         if dep in Sta and arr in Sta:
                             if dat not in D:
@@ -1059,8 +1296,7 @@ def poids_par_h(j):
     N=len(D)
     H=[heures[h]/N for h in heures]
     t=sum(H[h] for h in heures)
-    return 'pourcentage de trajets par heure', [[h, H[h]*100/t] for h in heures]
-
+    return  [[h, H[h]*100/t] for h in heures]
 ```
 
 **Exemple d'utilisation**:
@@ -1071,51 +1307,49 @@ Appeler `poids_par_heure` retourne `[[0, 0],[1, 0],[2, 0],[3, 0],[4, 0],[5, 0], 
 </details>
 
 
-<details>
-  <summary>`trajets_parcourus(j, h):`</summary>
-**Description**:
-Cette fonction classe les trajets d'un jour `j` à une heure `h` avec leur multiplicité moyenne. 
+<details> 
+  <summary>`trajets_parcourus(j, h)`</summary>
+**Description**:  
+La fonction recense les trajets ayant eut lieu un jour `j` à une heure `h` et leur occurence. 
+        
+**Paramètres**:  
+- `j` (int): Le numéro du jour de la semaine (entre 0 et 6) voulu.   
+- `h` (int): Le numéro de l'heure (entre 0 et 23) voulue.   
 
-**Paramètre**:
-  <ul>
-    <li>`j` (int): Numéro du jour de la semaine (0 pour lundi, ..., 6 pour dimanche)
-    <li>`h` (int): Numéro de l'heure dans la journée (0 pour 00:00-00:59, ..., 23 pour 23:00-23:59]
-  </ul>
 
-**Retourne**:
--`F` (matrix): [[station départ, station arrivée], multiplicité à l'heure `h` dans le jour `j`]
+**Retourne**:  
+- `F` (matrix): Une matrice avec chaque ligne de la forme [[station de départ, station d'arrivée], occurrence]
 
-**Code de la fonction**:
+
+
+**Code de la fonction**:  
 ```python
 def trajets_parcourus(j,h):
-    D=[]
+    """
+    Description: 
+    La fonction 'trajets_parcourus' recense les trajets ayant eu lieu un jour j à une heure h et leur occurence. 
+    
+    Args: 
+    - j : int
+        Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+    - h : int
+        Le numéro (de 0 à 23) de l'heure voulue. 
+        
+    Returns: 
+    - matrix 
+        Une matrice avec chaque ligne de la forme [[station de départ, station d'arrivée], occurrence]
+    """
+    D=trajets_parcourus_jour(j)
     T=[]
     U=[]
     F=[]
-    for file in files:
-        with open(file, 'r', encoding='utf-8') as f:
-            lecteur = csv.reader(f, delimiter=';')  # Définir le séparateur si nécessaire
-            next(lecteur) #ignorer l'entête 
-            for ligne in lecteur: 
-                dat, heur = ligne[0].split(' ')
-                dep=ligne[2].split(' ')[0]
-                arr=ligne[3].split(' ')[0]
-                date=datetime.strptime(dat, '%Y-%m-%d')
-                jour=date.weekday()
-                if jour==j:
-                    if dep!='' and arr!='':
-                        if dep in Sta and arr in Sta:
-                            D.append([heur, dep, arr])
-    #return D #récupération de tous les trajets pour les jours j
     for j in D:
         H=int(j[0].split(':')[0])
         if H==h:
             T.append([j[1],j[2]])
-    #return T #récupérations de tous les trajets pour les jours j à l'heure h
     for I in T:
         if I not in U:
             U.append(I) 
-    #return U #récupération de tous les trajets de façon unique
     for s in U:
         c=0
         for t in T:
@@ -1129,6 +1363,152 @@ def trajets_parcourus(j,h):
 Supposons qu'il y ait 25 trajets un jeudi entre midi et 13h faisant Comédie-Fac des sciences
 Appeler `trajets_parcourus(3, 12)` retourne une matrice dont l'une des lignes est `[['Comédie', 'Fac des sciences'], 25]`
 
+</details>
+
+<details> 
+  <summary>`TRAJETS(j, h)`</summary>
+**Description**:  
+La fonction recense les trajets ayant eut lieu un jour `j` à une heure `h`. 
+        
+**Paramètres**:  
+- `j` (int): Le numéro du jour de la semaine (entre 0 et 6) voulu.   
+- `h` (int): Le numéro de l'heure (entre 0 et 23) voulue.   
+
+
+**Retourne**:  
+- `T` (matrix): Une matrice avec chaque ligne de la forme [station de départ, station d'arrivée].
+
+
+
+**Code de la fonction**:  
+```python
+def TRAJETS(j, h):
+    """
+    Description: 
+    La fonction 'TRAJETS' recense les trajets ayant eu lieu un jour j à une heure h. 
+    
+    Args: 
+    - j : int
+        Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+    - h : int
+        Le numéro (de 0 à 23) de l'heure voulue. 
+        
+    Returns: 
+    - matrix 
+        Une matrice avec chaque ligne de la forme [station de départ, station d'arrivée]
+    """
+    T=[]
+    J=[Lu, Ma, Me, Je, Ve, Sa, Di]
+    L=J[j]
+    for j in L: 
+        H=int(j[0].split(':')[0])
+        if H==h: 
+            T.append([j[1], j[2]])
+    return T 
+```
+</details>
+
+
+
+
+
+<details> 
+  <summary>`traj_mult(j, h)`</summary>
+**Description**:  
+La fonction recense les trajets ayant eut lieu un jour `j` à une heure `h` et leur occurrence s'ils arrivent plus de deux fois par an. 
+        
+**Paramètres**:  
+- `j` (int): Le numéro du jour de la semaine (entre 0 et 6) voulu.   
+- `h` (int): Le numéro de l'heure (entre 0 et 23) voulue.   
+
+
+**Retourne**:  
+- `G` (matrix): Une matrice avec chaque ligne de la forme [[station de départ, station d'arrivée], occurrence] uniquement si l'occurrence est supérieure à 8 ( 2 fois pas an).
+
+
+
+
+**Code de la fonction**:  
+```python
+def traj_mult(j, h):
+    """
+    Description: 
+    La fonction 'trajets_mult' recense les trajets ayant eu lieu un jour j à une heure h et leur occurrence s'ils arrivent plus de deux fois par an. 
+        
+    Args: 
+        - j : int
+            Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+        - h : int
+            Le numéro (de 0 à 23) de l'heure voulue. 
+    
+    Returns: 
+        - matrix 
+        Une matrice avec chaque ligne de la forme [[station de départ, station d'arrivée], occurrence] uniquement si l'occurrence est supérieure à 8 ( 2 fois pas an).
+    """
+    T=TRAJETS(j, h)
+    U=[]
+    F=[]
+    G=[]
+    for I in T:
+        if I not in U:
+            U.append(I) 
+    for s in U:
+        c=0
+        for t in T:
+            if t==s:
+                c+=1
+        F.append([s,c])
+    for i in F:
+        if i[1]>=8: # min une fois par semestre 
+            G.append(i)
+    return G
+```
+</details>
+
+<details> 
+  <summary>`trajets_parcourus_jour(j)`</summary>
+**Description**:  
+La fonction recense tous les trajets ayant eut lieu un jour `j`. 
+        
+**Paramètre**:  
+- `j` (int): Le numéro du jour de la semaine (entre 0 et 6) voulu.   
+
+**Retourne**:  
+- `D` (matrix): Une matrice avec chaque ligne de la forme [heure de départ, station de départ, station d'arrivée]. 
+
+
+**Code de la fonction**:  
+```python
+def trajets_parcourus_jour(j):
+    """
+    Description: 
+    La fonction 'trajets_parcourus_jour' recense tous les trajets ayant eut lieu un jour j. 
+    
+    Args: 
+    - j : int
+        Le numéro du jour de la semaine (entre 0 et 6) voulu. 
+     
+    Returns: 
+    - matrix
+        Une matrice avec chaque ligne de la forme [heure de départ, station de départ, station d'arrivée]. 
+    """
+    D=[]
+    for file in files:
+        with open(file, 'r', encoding='utf-8') as f:
+            lecteur = csv.reader(f, delimiter=',')  # Définir le séparateur si nécessaire
+            next(lecteur) #ignorer l'entête 
+            for ligne in lecteur: 
+                dat, heur = ligne[0].split(' ')
+                dep=ligne[1].split(' ')[0]
+                arr=ligne[2].split(' ')[0]
+                date=datetime.strptime(dat, '%Y-%m-%d')
+                jour=date.weekday()
+                if jour==j:
+                    if dep in Sta and arr in Sta:
+                        if dep!=arr:
+                            D.append([heur, dep, arr])
+    return D 
+```
 </details>
 
 
