docu + workflow test

--- a/docs/docu.qmd
+++ b/docs/docu.qmd
@@ -353,6 +353,18 @@ La bibliothèque `re` permet de travailler avec des expressions régulières pou
 Grâce à `re`, nous avons pu extraire des informations spécifiques des chaînes de caractères et nettoyer les données textuelles de manière efficace.
 </details>
 
+<details> <summary>`scikit-learn`</summary>
+`scikit-learn` fournit des outils pour l'analyse des données et du machine learning, nous l'utilisons implicitement dans l'application shiny.
+</details>
+
+<details> <summary>`shiny`</summary>
+`shiny` est une bibliothèque permettant de créer des applications web interactives pour mieux visualiser et analyser des données, il nous a permis ici de contourner l'aspect statique du site Quarto.
+</details>
+
+<details> <summary>`shinyswatch`</summary>
+`shinyswatch` est un module qui vient en complément de shiny et qui permet de personnaliser l'apparence des applications grâce à l'intégration de thèmes préconfigurés.
+</details>
+
 <details> <summary>`unicodedata`</summary>
 `unicodedata` est utilisée pour normaliser les chaînes de caractères Unicode.  
 Cette bibliothèque est essentielle pour traiter les caractères spéciaux et garantir la cohérence des chaînes de caractères provenant de différentes sources.
