--- a/docs/docu.qmd
+++ b/docs/docu.qmd
@@ -2058,7 +2058,7 @@ pip install -r requirements.txt
 ```
 Après cette commande, l'environnement virtuel `Cycle3` occupera environ 1 Go de votre espace. Vous êtes maintenant prêt à utiliser notre projet avec tous les packages nécessaires.
 
-## 9.3 Comment lancer le certain script
+## 9.3 Comment lancer certains scripts
 
 Tous les scripts doivent être exécutés depuis le terminal. Assurez-vous que vous êtes dans la racine du projet, nommée `PROJ_HAX712X`. Dans les chemins relatifs, `./ `fait référence à la racine du projet.
 
