--- a/docs/docu.qmd
+++ b/docs/docu.qmd
@@ -842,7 +842,8 @@ def map_jour_h(j, h,style,jour):# Entrée 0-6 pour les jours de la semaine, 0-1 
 **Description**:  
 La fonction génère une carte des trajets parcourus un jour de la semaine j et à une heure h, ainsi que la probabilité qu'il soit de nouveau parcouru (en tenant compte des archives).        
 
-**Paramètres**:  
+**Paramètres**:
+
 - `j` (int): Le numéro du jour de la semaine (entre 0 et 6) voulu.   
 - `h` (int): Le numéro de l'heure (entre 0 et 23) voulue.   
 - `jour` (str): Le jour voulu (format Jour).   
@@ -2121,6 +2122,14 @@ Lancez la commande suivante pour créer la vidéo :
  python ./Cycle3/vidéo/vidéo.py
 ```
 Vous pourrez choisir le nombre de trajets à afficher. La vidéo générée sera sauvegardée dans `./Cycle3/visualisation/simulation_trajets.mp4`.
+
+### 9.3.5 Utilisation de la prédiction
+
+Pour lancer notre script sur la prédiction :
+
+```bash 
+./Cycle3/prediction/prediction.py
+```
 
 ## 9.4 Création et utilisation du site 
 
