--- a/slide/slide.qmd
+++ b/slide/slide.qmd
@@ -150,12 +150,7 @@ format:
 
 
 <br>
-<br>
-
-
-<br>
 </div>
-
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 # Résultats obtenus {.section-background}
@@ -164,42 +159,89 @@ format:
 ## Analyse des datasets
 <hr>
 
-::: fragment
+
 <div style="text-align: center;">
-[**Analyse des trajets en 2022**]{.custom-subtitle3}
+[**Analyse des trajets**]{.custom-subtitle3}
+<br>
+<br>
 </div>
-::: {.columns style="display: flex; justify-content: center;"}
-::: {.column width="65%"}
+
+:::{.columns}
+::: {.column width="50%"}
 <div style="text-align: center;">
-<img src="images/analys_datasets/cell-2-output-2.png" width="63%" align="middle">
+<br>
+
+
+<br>
+<img src="images/analys_datasets/cell-2-output-2.png" width="90%" align="middle">
 </div>
 :::
-::: {.column width="35%"}
+::: {.column width="38%"}
 <div style="text-align: center;">
-<img src="images/ana_trage.png" width="60%" align="middle">
+<img src="images/ana_trage.png" width="100%" align="middle">
 </div>
 :::
+::: {.column width="12%"}
+<div style="text-align: center;">
+<img src="images/jours.png" width="100%" align="middle">
+</div>
 :::
 :::
 
-::: fragment
 <div style="text-align: center;">
-[**Distance moyenne parcourue et stations les plus populaires**]{.custom-subtitle3}
+<br>
+
+
+<br>
+<br>
+
+
+<br>
 </div>
-::: {.columns style="display: flex; justify-content: center;"}
-::: {.column width="50%"}
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+## Analyse des datasets
+<hr>
+
+
 <div style="text-align: center;">
+[**Distance moyenne parcourue**]{.custom-subtitle3}
+<br>
+<br>
 <img src="images/analys_datasets/StationStat.png" width="60%" align="middle">
 </div>
-:::
-::: {.column width="50%"}
-<div style="text-align: center;">
-<img src="images/analys_datasets/Distance_par_mois_2021_2024.png" width="85%" align="middle">
-</div>
-:::
-:::
-:::
 
+<div style="text-align: center;">
+<br>
+
+
+<br>
+<br>
+
+
+<br>
+</div>
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+## Analyse des datasets
+<hr>
+<div style="text-align: center;">
+[**Stations les plus populaires**]{.custom-subtitle3}
+<br>
+<br>
+<img src="images/analys_datasets/Distance_par_mois_2021_2024.png" width="100%" align="middle">
+</div>
+
+<div style="text-align: center;">
+<br>
+
+
+<br>
+<br>
+
+
+<br>
+</div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 ## Création des maps interactives
@@ -338,13 +380,48 @@ Ci-dessus, une carte interactive présentant le *nombre de vélos en temps réel
 
 ::: {.columns style="display: flex; justify-content: center;"}
 
-::: {.column width="50%"}
+::: {.column width="45%"}
+<div style="text-align: center;">
+<br>
+<br>
+<br>
+<img src="images/expl_charl.png" width="70%" align="middle">
+</div>
+:::
+
+::: {.column width="55%"}
 <div style="text-align: center;">
 <img src="images/charl_1_2.png" width="73%" align="middle">
 </div>
 :::
 
-::: {.column width="50%"}
+:::
+
+<div style="text-align: center;">
+<br>
+<br>
+</div>
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+## Simulations et prédictions
+<hr>
+
+<div style="text-align: center;">
+[**Carte des trajets**]{.custom-subtitle3}
+</div>
+
+::: {.columns style="display: flex; justify-content: center;"}
+
+::: {.column width="45%"}
+<div style="text-align: center;">
+<br>
+<br>
+<br>
+<img src="images/expl_charl.png" width="70%" align="middle">
+</div>
+:::
+
+::: {.column width="55%"}
 <div style="text-align: center;">
 <img src="images/charl_1_3.png" width="73%" align="middle">
 </div>
@@ -423,6 +500,9 @@ Les graphiques montrent les performances pour différentes quantités de trajets
 <br>
 
 
+<br>
+<br>
+
 
 <br>
 </div>
@@ -438,12 +518,12 @@ Les graphiques montrent les performances pour différentes quantités de trajets
 ::: {.columns style="display: flex; justify-content: center;"}
 ::: {.column width="50%"}
 <div style="text-align: center;">
-<img src="images/perf_analys/3.png" width="100%" align="middle">
+<img src="images/perf_analys/3.png" width="110%" align="middle">
 </div>
 :::
 ::: {.column width="50%"}
 <div style="text-align: center;">
-<img src="images/perf_analys/4.png" width="100%" align="middle">
+<img src="images/perf_analys/4.png" width="110%" align="middle">
 </div>
 :::
 :::
@@ -458,7 +538,8 @@ Pour améliorer l'efficacité temporelle, des outils comme **ThreadPoolExecutor*
 <div style="text-align: center;">
 <br>
 
-
+<br>
+<br>
 
 <br>
 </div>
@@ -552,17 +633,17 @@ Pour améliorer l'efficacité temporelle, des outils comme **ThreadPoolExecutor*
 
 ::: {.incremental}  
 1. **Gestion des données :**  
-   - Problèmes avec les formats des données (JSON non formatés, CSV ou DataFrame).  
-   - Importation et lecture des fichiers CSV, particulièrement complexes au début.  
-   - Données manquantes nécessitant un traitement supplémentaire.  
+   - Problèmes avec les formats des données.  
+   - Importation et lecture des fichiers CSV.  
+   - Données manquantes.  
 2. **Création de cartes interactives et prévisions de trafic :**  
-   - Temps de création élevé pour développer des cartes interactives.  
+   - Temps de création.  
 3. **Déploiement du site web :**  
-   - Difficultés initiales lors du déploiement (GitHub Pages).  
-   - Intégration des cartes interactives, notamment celles utilisant **Shiny**.  
-   - Configuration des fonctionnalités interactives liées aux vidéos.  
+   - Déploiement (GitHub Pages).  
+   - Intégration des cartes interactives avec **Shiny**.  
+   - Configuration galerie vidéo.  
 4. **Documentation du projet :**  
-   - Complexité liée au formatage clair et lisible d'un grand nombre de fonctions.  
+   - Complexité de project.  
    - Configuration documentation avec **Sphinx**.  
 :::
 
