--- a/slide/slide.qmd
+++ b/slide/slide.qmd
@@ -631,17 +631,23 @@ Pour améliorer l'efficacité temporelle, des outils comme **ThreadPoolExecutor*
 ## Problèmes rencontrés
 <hr>
 
-::: {.incremental}  
+::: fragment  
 1. **Gestion des données :**  
    - Problèmes avec les formats des données.  
    - Importation et lecture des fichiers CSV.  
    - Données manquantes.  
+:::
+::: fragment 
 2. **Création de cartes interactives et prévisions de trafic :**  
-   - Temps de création.  
+   - Temps de création.
+:::
+::: fragment 
 3. **Déploiement du site web :**  
    - Déploiement (GitHub Pages).  
    - Intégration des cartes interactives avec **Shiny**.  
    - Configuration galerie vidéo.  
+:::
+::: fragment 
 4. **Documentation du projet :**  
    - Complexité de project.  
    - Configuration documentation avec **Sphinx**.  
