--- a/slide/slide.qmd
+++ b/slide/slide.qmd
@@ -56,9 +56,48 @@ format:
 
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
+## Structure de la présentation
+<hr>
+
+<div style="text-align: center;">
+<br>
+</div>
+
+- **Introduction et organisation.**  
+- **Résultats obtenus.**  
+- **Analyse du script.**
+- **Synthèse.**
+
+<div style="text-align: center;">
+<br>
+
+
+<br>
+
+<br>
+
+
+<br>
+
+<br>
+
+
+<br>
+
+<br>
+
+
+<br>
+
+<br>
+
+
+<br>
+</div>
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
 # Introduction et organisation {.section-background}
 <!---------------------------------------------------------------------------->
-
 <!---------------------------------------------------------------------------->
 ## Présentation du projet
 <hr>
@@ -156,7 +195,7 @@ format:
 # Résultats obtenus {.section-background}
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
-## Analyse des datasets
+## Analyse des données
 <hr>
 
 
@@ -200,7 +239,7 @@ format:
 </div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
-## Analyse des datasets
+## Analyse des données
 <hr>
 
 
@@ -223,7 +262,7 @@ format:
 </div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
-## Analyse des datasets
+## Analyse des données
 <hr>
 <div style="text-align: center;">
 [**Stations les plus populaires**]{.custom-subtitle3}
@@ -423,7 +462,7 @@ Ci-dessus, une carte interactive présentant le *nombre de vélos en temps réel
 
 ::: {.column width="55%"}
 <div style="text-align: center;">
-<img src="images/charl_1_3.png" width="73%" align="middle">
+<img src="images/charl_1_3.png" width="74%" align="middle">
 </div>
 :::
 
@@ -700,9 +739,9 @@ Pour améliorer l'efficacité temporelle, des outils comme **ThreadPoolExecutor*
 3. **Expérience en travail d'équipe.** 
 
 4. **Compétences développées :**  
-   - Analyse des données avec Python.  
-   - Visualisation des données avec **Folium**. 
-   - Configuration et automatisation CI/CD avec **GitHub Actions**.  
+   - Analyse des données avec *Python*.  
+   - Visualisation des données avec *Folium*. 
+   - Creation de site avec *Quarto* et *Shiny*.  
 
 5. **Validation et tests.**   
 
